package com.wangzhb.sample.refactoring.v2;

/**
 * Movie 代表一步影片
 *
 * @author wang
 * @since 2021/11/27 12:40
 **/
public class Movie {

    public static final int CHILDREN = 2;
    public static final int REGULAR = 0;
    public static final int NEW_RELEASE = 1;

    private String title;
    private Price price;
    private int priceCode;

    public Movie() {
    }

    public Movie(String title, int priceCode) {
        this.title = title;
        setPriceCode(priceCode);
    }

    public String getTitle() {
        return title;
    }

    public void setTitle(String title) {
        this.title = title;
    }

    public int getPriceCode() {
        return priceCode;
    }

    public void setPriceCode(int priceCode) {
        switch (priceCode) {
            case REGULAR:
                price = new RegularPrice();
                break;
            case CHILDREN:
                price = new ChildrenPrice();
                break;
            case NEW_RELEASE:
                price = new NewReleasePrice();
                break;
            default:
                throw new IllegalArgumentException("illegal price code");
        }
    }


    double getCharge(int dayRented) {
        return price.getCharge(dayRented);
    }
}
